--- a/personal.css
+++ b/personal.css
@@ -123,7 +123,7 @@ h2{ /*affects subtitles of main, bottom containers*/
   width: 350px;
   height: 50px;
   padding: 10px;
-  background-color: #323232;
+  background-color: none;
   border-radius: 20px;
 
   display: flex;
@@ -140,6 +140,7 @@ h2{ /*affects subtitles of main, bottom containers*/
 }
 
 .outside-links.slide-in {
+	background-color: #323232;
 	transform: translateX(400px);
 }
 /* Icons */
